# Force-encryption

./: README.md  pyproject.toml
scripts/: get_encryption_key.py  people_runner_decrypted.py  people_runner_encrypted.py
src/: api_reader.py  crypto_utils.py  data_classes.py  logger.py  swapi_reader.py
